# Learning-AI

./: .gitignore  2.1 a first look at a neural network.ipynb  README.md
Book - Deep Learning Python/: 2.1 a first look at a neural network.ipynb
Coursera - Machine Learning/: 03 Multiclass Logistic Regression.ipynb  04 Neural Network Prediction.ipynb  05 Neural Network Learning.ipynb  05 Variance and Bias.ipynb  07 Unsupervized Learning.ipynb  Linear Regression.ipynb  Logistic Regression.ipynb  Multi Class.ipynb  Multiclass Logistic Regression.ipynb  Neural Network Feedforward Propagation.ipynb  Neural Networks.ipynb  ex1.ipynb  ex2.ipynb
Coursera - Machine Learning/.ipynb_checkpoints/: 05 Neural Network Learning-checkpoint.ipynb  Multi Class-checkpoint.ipynb
Coursera - Octave Machine Learning/: 01 Linear Regression.ipynb  02 Logistic Regression.ipynb  03 Multiclass Logistic Regression.ipynb  03 Neural Networks Prediction.ipynb  04 Neural Network Learning.ipynb  05 Variance and Bias.ipynb  08 Anomaly Detection.ipynb  08 Recommender Systems.ipynb  README.md  ex2.ipynb  ex3.ipynb
Coursera - Octave Machine Learning/.ipynb_checkpoints/: 08 Recommender Systems-checkpoint.ipynb  Logistic Regression-checkpoint.ipynb  Multi Class-checkpoint.ipynb
Coursera - Octave Machine Learning/data/: token.mat
Coursera - Octave Machine Learning/utils/: util2.py  util4.py  util8.py
Tools - LLM Agents/: checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  main.py  pyproject.toml  react_agent.py  react_agent_langgraph.py  react_agent_manual.py
(+58 files in other folders)
